--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /client/cabal.sandbox.config
 /client/.cabal-sandbox/
 /client/dist/
+/target
+/classes
+/checkouts
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
